--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ ktor:
     modules:
       - appdev.studdybuddy.ApplicationKt.module
   deployment:
-    port: 8080
+    port: 5431
 postgres:
-  url: "jdbc:postgresql://localhost/default"
-  user: username
-  password: password
+  url: "jdbc:postgresql://localhost:5432/appdevdb"
+  user: "admin"
+  password: ""
